--- a/index.html
+++ b/index.html
@@ -12,20 +12,16 @@
 <body>
     <div class="container">
         <header class="header">
-
             <div class="header__logo">
                 <img src="img/Group 452.png"/>
             </div>
-
             <div class="header__box-logIn">
                 <span>Not your first time here?</span>
                 <button class="header-logIn__button button">Loge in</button>
             </div>
-
         </header>
 
         <div class="content">
-
             <main class="main">
 
                 <article class="maine__article--profile profile">
@@ -33,8 +29,8 @@
                         <h2 class="profile__text__header">Samanta Brows</h2>
                         <p class="profile__text__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. perspiciatis provident ratione tempore velit.<br/> Cupiditate in ipsum laudantium maxime officiis praesentium ullam vel veniam.
                         Lorem . Accusamus deserunt earum facere iste laudantium magni optio quae quia quisquam, quos ratione veritatis?<br/>
-                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias architecto assumenda deserunt dolor dolorum eaque eos, expedita incidunt ipsam laborum maxime numquam provident quis rerum soluta vel, vitae! Pariatur, quam.</p>
-
+                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias architecto assumenda deserunt dolor dolorum eaque eos, expedita incidunt ipsam laborum maxime numquam provident quis rerum soluta vel, vitae! Pariatur, quam.
+                        </p>
                     </div>
                     <div class="profile__img"></div>
                     <div class="profile__div__icons">
@@ -45,63 +41,6 @@
                     </div>
                    <div class="profile__button-container"><button>Massage</button></div>
                 </article>
-
-                <aside class="main__aside aside">
-
-                    <div class="aside__title">
-                        <div class="aside__title__picture"></div>
-                        <h1>How to shoot a perfect beautiful Portrait?</h1>
-                    </div>
-
-                    <h2>Services</h2>
-
-                    <div class="aside__cards">
-                        <div class="aside__cards--first-blue card">
-                            <div class=" aside__cards__left-box">
-                                <div class="aside__cards__box-time--yellow time-box">
-                                    <div>45 <span>Min</span></div>
-                                </div>
-                                <h3>Free</h3>
-                            </div>
-                            <div class="aside__cards__box-textarea">
-                                <img src="img/card%20-icon.PNG" class="aside__card__icon--img"/>
-                                <h2>Portal Photography for  beginners</h2>
-                                <p>I'm an SEO and content marketing exper al...</p>
-                            </div>
-                        </div>
-
-                        <div class="aside__cards--second card">
-                            <div class=" aside__cards__left-box">
-                                <div class="aside__cards__box-time--blue time-box">
-                                    <div>15 <span>Min</span> </div>
-                                </div>
-                                <h3>Free</h3>
-                            </div>
-                            <div class="aside__cards__box-textarea">
-                                <h2>Portrait Photograph</h2>
-                                <i  class="aside__card__icon fa " style="font-size: 30px;" >&#xf22d;</i>
-                                <p>I'm an SEO and content marketing exper al...</p>
-                            </div>
-                        </div>
-
-                        <div class="aside__cards--third card">
-                            <div class=" aside__cards__left-box">
-                                <div class="aside__cards__box-time-grey time-box">
-                                    <div>1 <span>Hour</span> </div>
-                                </div>
-                                <h3>$43</h3>
-                            </div>
-                            <div class="aside__cards__box-textarea">
-                                <h2>Portrait Photograph for <br> middles experts</h2>
-                                <i  class="aside__card__icon fa " style="font-size: 32px;" >&#xf22d;</i>
-                                <p>I'm an SEO and content marketing exper <u class="card__textarea--bold">More</u></p>
-                            </div>
-                        </div>
-                        <div class="aside__cards__button"><button>Book a Call</button></div>
-                    </div>
-
-                </aside>
-
 
                 <section class="mine__section__gallery gallery">
                     <h2>Gallery</h2>
@@ -126,7 +65,6 @@
                             <source src="img/gallery-video01.mp4" type="video/mp4"/> video not supported
                         </video>
                     </div>
-
                 </section >
 
                 <section class="main__section__reviews reviews">
@@ -146,7 +84,6 @@
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum impedit nobis perspiciatis veritatis! Atque doloremque ea ipsa ipsum laboriosam minima mollitia? Assumenda atque laborum quod ratione sint voluptate. Eligendi, nobis!</p>
                     </div>
                 </div>
-
                 <div class="reviews__section">
                     <div  class="reviews__section__prof-picture02 reviews_pic"> </div>
                     <div class="reviews__section__content">
@@ -157,9 +94,7 @@
                             <img src="img/Path Copy 2.png" alt="full star" class="reviews__stars_img">
                             <img src="img/Path Copy 2.png" alt="full star" class="reviews__stars_img">
                             <img src="img/Path Copy 4.png" alt="empty star" class="reviews__stars_img">
-
                         </div>
-
                         <p class="reviews__section__content__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur delectus exercitationem illo laboriosam nobis, non omnis possimus sint. Accusamus asperiores excepturi inventore magni maiores reprehenderit suscipit voluptas. Corporis, odio perferendis
                         Lorem ipsum dolor sit amet, atur doloremque iure neque officiis quos tempore unde voluptas</p>
                     </div>
@@ -193,7 +128,55 @@
                 </div>
                 </section>
 
-
+                <aside class="main__aside aside">
+                    <div class="aside__title">
+                        <div class="aside__title__picture"></div>
+                        <h1>How to shoot a perfect beautiful Portrait?</h1>
+                    </div>
+                    <h2>Services</h2>
+                    <div class="aside__cards">
+                        <div class="aside__cards--first-blue card">
+                            <div class=" aside__cards__left-box">
+                                <div class="aside__cards__box-time--yellow time-box">
+                                    <div>45 <span>Min</span></div>
+                                </div>
+                                <h3>Free</h3>
+                            </div>
+                            <div class="aside__cards__box-textarea">
+                                <img src="img/card%20-icon.PNG" class="aside__card__icon--img"/>
+                                <h2>Portal Photography for  beginners</h2>
+                                <p>I'm an SEO and content marketing exper al...</p>
+                            </div>
+                        </div>
+                        <div class="aside__cards--second card">
+                            <div class=" aside__cards__left-box">
+                                <div class="aside__cards__box-time--blue time-box">
+                                    <div>15 <span>Min</span> </div>
+                                </div>
+                                <h3>Free</h3>
+                            </div>
+                            <div class="aside__cards__box-textarea">
+                                <h2>Portrait Photograph</h2>
+                                <i  class="aside__card__icon fa " style="font-size: 30px;" >&#xf22d;</i>
+                                <p>I'm an SEO and content marketing exper al...</p>
+                            </div>
+                        </div>
+                        <div class="aside__cards--third card">
+                            <div class=" aside__cards__left-box">
+                                <div class="aside__cards__box-time-grey time-box">
+                                    <div>1 <span>Hour</span> </div>
+                                </div>
+                                <h3>$43</h3>
+                            </div>
+                            <div class="aside__cards__box-textarea">
+                                <h2>Portrait Photograph for <br> middles experts</h2>
+                                <i  class="aside__card__icon fa " style="font-size: 32px;" >&#xf22d;</i>
+                                <p>I'm an SEO and content marketing exper <u class="card__textarea--bold">More</u></p>
+                            </div>
+                        </div>
+                        <div class="aside__cards__button"><button>Book a Call</button></div>
+                    </div>
+                </aside>
 
 
             </main>
